原型设计被盖了，恢复回去